Fix Render deployment configuration

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2209,7 +2209,7 @@ document.getElementById('dob').addEventListener('blur', function () {
                 }
                 
                 // Submit to API
-                const response = await fetch('https://your-railway-api.up.railway.app/api/enrollments', {
+                const response = await fetch('https://njerenje-api.onrender.com/api/enroll', {
                     method: 'POST',
                     body: formData
                 });
